# django-oasis

./: .buildinfo  .coveragerc  .gitignore  MANIFEST.in  README.md  api.html  auth.html  devtools.py  genindex.html  index.html  mypy.ini  objects.inv  operations.html  pagination.html  parameter_body.html  parameter_cookie.html  parameter_header.html  parameter_path.html  parameter_query.html  py-modindex.html  pyproject.toml  pytest-doc.ini  pytest-samples.ini  pytest.ini  quickstart.html  response.html  search.html  searchindex.js  setup.cfg  tox.ini  upload_file.html
.doctrees/: api.doctree  auth.doctree  environment.pickle  index.doctree  operations.doctree  pagination.doctree  parameter_body.doctree  parameter_cookie.doctree  parameter_header.doctree  parameter_path.doctree  parameter_query.doctree  quickstart.doctree  response.doctree  upload_file.doctree
_sources/: api.rst.txt  auth.rst.txt  index.rst.txt  operations.rst.txt  parameter_body.rst.txt  parameter_cookie.rst.txt  parameter_header.rst.txt  parameter_path.rst.txt  parameter_query.rst.txt  quickstart.rst.txt  upload_file.rst.txt
_spec/: 3cbce729.json  3fd45a39.json  40b21b88.json  4134f9a1.json  4225589f.json  44929adc.json  47f57162.json  49190992.json  61d01a53.json  76255106.json  784dc23b.json  7ecca46a.json  7f90edeb.json  820a9fa5.json  8632b151.json  8931968f.json  94f0d5d4.json  96783308.json  96866fc9.json  a9baf845.json  a9d7a2b8.json  b0b067bc.json  b159103e.json  b79b785f.json  bc07b7b6.json  cb928df9.json  d4267825.json  dd54ff1b.json  df99b5cc.json  e1b15afa.json  e368e048.json  (+2 more)
(+267 files in other folders)
